fix links to rest of pages, still need to add navbar to all:wq

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,7 +1,7 @@
 <div>
 	<h1>About</h1>
 	<div class="row">
-		<img class="pfp" src="assets/headshot_2024.png" />
+		<img class="pfp" src="/portfolio2/assets/headshot_2024.png" />
 		<div class="col">
 			<p>
 				Hi, I'm Catherine! I'm a full-stack developer based in Seattle,
@@ -13,19 +13,23 @@
 
 			<div class="icon-links">
 				<a href="mailto:catherine_yu1@brown.edu" class="link"
-					><img src="assets/icons/Email.png" width="50px"
+					><img src="/portfolio2/assets/icons/Email.png" width="50px"
 				/></a>
 				<a
 					href="https://github.com/catherineyu8"
 					class="link"
 					target="_blank"
-					><img src="assets/icons/GitHub.png" width="50px"
+					><img
+						src="/portfolio2/assets/icons/GitHub.png"
+						width="50px"
 				/></a>
 				<a
 					href="https://www.linkedin.com/in/catherinejyu/"
 					class="link"
 					target="_blank"
-					><img src="assets/icons/LinkedIn.png" width="50px"
+					><img
+						src="/portfolio2/assets/icons/LinkedIn.png"
+						width="50px"
 				/></a>
 			</div>
 		</div>
@@ -51,29 +55,53 @@
 	</p>
 	<div class="img_carousel">
 		<div class="img_wrapper">
-			<img src="assets/hobbies/IMG_4775.png" alt="Hobby Image 1" />
+			<img
+				src="/portfolio2/assets/hobbies/IMG_4775.png"
+				alt="Hobby Image 1"
+			/>
 		</div>
 		<div class="img_wrapper">
-			<img src="assets/hobbies/IMG_6867.png" alt="Hobby Image 6" />
+			<img
+				src="/portfolio2/assets/hobbies/IMG_6867.png"
+				alt="Hobby Image 6"
+			/>
 		</div>
 		<div class="img_wrapper">
-			<img src="assets/hobbies/IMG_5381.png" alt="Hobby Image 2" />
+			<img
+				src="/portfolio2/assets/hobbies/IMG_5381.png"
+				alt="Hobby Image 2"
+			/>
 		</div>
 		<div class="img_wrapper">
-			<img src="assets/hobbies/IMG_6394.png" alt="Hobby Image 3" />
+			<img
+				src="/portfolio2/assets/hobbies/IMG_6394.png"
+				alt="Hobby Image 3"
+			/>
 		</div>
 		<div class="img_wrapper">
-			<img src="assets/hobbies/IMG_6745.png" alt="Hobby Image 4" />
+			<img
+				src="/portfolio2/assets/hobbies/IMG_6745.png"
+				alt="Hobby Image 4"
+			/>
 		</div>
 		<div class="img_wrapper">
-			<img src="assets/hobbies/IMG_6763.png" alt="Hobby Image 5" />
+			<img
+				src="/portfolio2/assets/hobbies/IMG_6763.png"
+				alt="Hobby Image 5"
+			/>
 		</div>
 
 		<div class="img_wrapper">
-			<img src="assets/hobbies/IMG_7595.png" alt="Hobby Image 8" />
+			<img
+				src="/portfolio2/assets/hobbies/IMG_7595.png"
+				alt="Hobby Image 8"
+			/>
 		</div>
 		<div class="img_wrapper">
-			<img src="assets/hobbies/IMG_9759.png" alt="Hobby Image 9" />
+			<img
+				src="/portfolio2/assets/hobbies/IMG_9759.png"
+				alt="Hobby Image 9"
+			/>
 		</div>
 	</div>
 </div>
