--- a/pages/project_pages/swimmingly.html
+++ b/pages/project_pages/swimmingly.html
@@ -1,6 +1,8 @@
 <div>
 	<!-- back button -->
-	<a id="back-to-projects"><span class="carrot">&lsaquo;</span> Projects</a>
+	<a href="/portfolio2/pages/projects.html"
+		><span class="carrot">&lsaquo;</span> Projects</a
+	>
 	<h1>This is Going Swimmingly!</h1>
 	<hr />
 	<p>
@@ -18,7 +20,7 @@
 	</p>
 
 	<div class="row">
-		<img src="/assets/swimmingly/racklemuffin.png" width="40%" />
+		<img src="/portfolio2/assets/swimmingly/racklemuffin.png" width="40%" />
 		<div class="overview-card">
 			<p>
 				<b class="blue">Goal:</b> Replicate method and results from a
@@ -61,7 +63,7 @@
 
 	<figure>
 		<div class="center">
-			<img src="/assets/swimmingly/sample.png" width="400px" />
+			<img src="/portfolio2/assets/swimmingly/sample.png" width="400px" />
 		</div>
 		<div class="center">
 			<figcaption>Sample sarcastic image/text input pair</figcaption>
@@ -119,7 +121,10 @@
 
 	<figure>
 		<div class="center">
-			<img src="/assets/swimmingly/our_results.png" width="300px" />
+			<img
+				src="/portfolio2/assets/swimmingly/our_results.png"
+				width="300px"
+			/>
 		</div>
 		<div class="center">
 			<figcaption>
@@ -158,7 +163,7 @@
 	<p>View our final project poster here:</p>
 	<div class="swimmingly-poster-wrapper">
 		<iframe
-			src="/assets/swimmingly/poster.pdf"
+			src="/portfolio2/assets/swimmingly/poster.pdf"
 			width="100%"
 			height="100%"
 		></iframe>
