--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,23 +7,23 @@
 
 	<div class="icon-links">
 		<a href="mailto:catherine_yu1@brown.edu" class="link"
-			><img src="assets/icons/Email.png" width="50px"
+			><img src="/portfolio2/assets/icons/Email.png" width="50px"
 		/></a>
 		<a href="https://github.com/catherineyu8" class="link" target="_blank"
-			><img src="assets/icons/GitHub.png" width="50px"
+			><img src="/portfolio2/assets/icons/GitHub.png" width="50px"
 		/></a>
 		<a
 			href="https://www.linkedin.com/in/catherinejyu/"
 			class="link"
 			target="_blank"
-			><img src="assets/icons/LinkedIn.png" width="50px"
+			><img src="/portfolio2/assets/icons/LinkedIn.png" width="50px"
 		/></a>
 	</div>
 
 	<div class="center">
-		<a href="/pages/projects.html" data-page="projects">
+		<a href="/portfolio2/pages/projects.html" data-page="projects">
 			<div class="mountain-container">
-				<img src="assets/mountain_bg.png" width="550px" />
+				<img src="/portfolio2/assets/mountain_bg.png" width="550px" />
 				<div class="overlay-text">
 					Click to <b class="blue">explore</b>
 					my projects!
