--- a/pages/about.html
+++ b/pages/about.html
@@ -1,107 +1,158 @@
-<div>
-	<h1>About</h1>
-	<div class="row">
-		<img class="pfp" src="/portfolio2/assets/headshot_2024.png" />
-		<div class="col">
-			<p>
-				Hi, I'm Catherine! I'm a full-stack developer based in Seattle,
-				currently at Brown University studying computer science and
-				applied math. At Brown, I am a member of the Women's Varsity
-				Swim and Dive Team, an undergraduate TA for CSCI 0170 (an intro
-				CS courses), and the Events chair of Girls Who Code.
-			</p>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<!-- metadata tags -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>catherine yu portfolio</title>
+		<!-- import CSS styles -->
+		<link rel="stylesheet" href="/portfolio2/styles.css" />
+	</head>
 
-			<div class="icon-links">
-				<a href="mailto:catherine_yu1@brown.edu" class="link"
-					><img src="/portfolio2/assets/icons/Email.png" width="50px"
-				/></a>
+	<!-- page content goes into <body> -->
+
+	<body>
+		<!-- navbar -->
+		<nav>
+			<a href="/portfolio2/index.html" data-page="home">Catherine Yu</a>
+			<div class="right-nav-tabs">
+				<a href="/portfolio2/pages/projects.html" data-page="projects"
+					>projects</a
+				>
+				<a href="/portfolio2/pages/about.html" data-page="about"
+					>about</a
+				>
+				<a href="/portfolio2/pages/contact.html" data-page="contact"
+					>contact</a
+				>
 				<a
-					href="https://github.com/catherineyu8"
-					class="link"
+					href="/portfolio2/assets/Catherine_Yu_Resume_24.pdf"
 					target="_blank"
-					><img
-						src="/portfolio2/assets/icons/GitHub.png"
-						width="50px"
-				/></a>
-				<a
-					href="https://www.linkedin.com/in/catherinejyu/"
-					class="link"
-					target="_blank"
-					><img
-						src="/portfolio2/assets/icons/LinkedIn.png"
-						width="50px"
-				/></a>
+					data-passthrough
+					>resume</a
+				>
 			</div>
-		</div>
-	</div>
+		</nav>
 
-	<p>
-		I enjoy spending time in the kitchen making coffee and matcha at my home
-		cafe, learning to cook traditional Chinese dishes from my mom, and
-		baking elaborate desserts. I also love to get crafty - some favorite art
-		forms are origami, collaging, and crocheting - but I'm open to try
-		anything! One of my favorite activities is hosting cozy gatherings (such
-		as home cafe pop-ups and casual dinner parties) to share all the things
-		I love, so that others can enjoy them too.
-	</p>
-	<p>
-		In my free time, I like to get outdoors and soak up as much of the
-		Seattle sun as I can. Catch me exploring local coffee shops and
-		restaurants, thrifting, and hiking in the nearby mountains!
+		<!-- main page content -->
+		<main>
+			<div>
+				<h1>About</h1>
+				<div class="row">
+					<img
+						class="pfp"
+						src="/portfolio2/assets/headshot_2024.png"
+					/>
+					<div class="col">
+						<p>
+							Hi, I'm Catherine! I'm a full-stack developer based
+							in Seattle, currently at Brown University studying
+							computer science and applied math. At Brown, I am a
+							member of the Women's Varsity Swim and Dive Team, an
+							undergraduate TA for CSCI 0170 (an intro CS
+							courses), and the Events chair of Girls Who Code.
+						</p>
 
-		<!-- i am also an avid Notion and GCal
+						<div class="icon-links">
+							<a
+								href="mailto:catherine_yu1@brown.edu"
+								class="link"
+								><img
+									src="/portfolio2/assets/icons/Email.png"
+									width="50px"
+							/></a>
+							<a
+								href="https://github.com/catherineyu8"
+								class="link"
+								target="_blank"
+								><img
+									src="/portfolio2/assets/icons/GitHub.png"
+									width="50px"
+							/></a>
+							<a
+								href="https://www.linkedin.com/in/catherinejyu/"
+								class="link"
+								target="_blank"
+								><img
+									src="/portfolio2/assets/icons/LinkedIn.png"
+									width="50px"
+							/></a>
+						</div>
+					</div>
+				</div>
+
+				<p>
+					I enjoy spending time in the kitchen making coffee and
+					matcha at my home cafe, learning to cook traditional Chinese
+					dishes from my mom, and baking elaborate desserts. I also
+					love to get crafty - some favorite art forms are origami,
+					collaging, and crocheting - but I'm open to try anything!
+					One of my favorite activities is hosting cozy gatherings
+					(such as home cafe pop-ups and casual dinner parties) to
+					share all the things I love, so that others can enjoy them
+					too.
+				</p>
+				<p>
+					In my free time, I like to get outdoors and soak up as much
+					of the Seattle sun as I can. Catch me exploring local coffee
+					shops and restaurants, thrifting, and hiking in the nearby
+					mountains!
+
+					<!-- i am also an avid Notion and GCal
 				user/enthusiast. the more organized my planner, the more
 				organized my life :D -->
-	</p>
-	<div class="img_carousel">
-		<div class="img_wrapper">
-			<img
-				src="/portfolio2/assets/hobbies/IMG_4775.png"
-				alt="Hobby Image 1"
-			/>
-		</div>
-		<div class="img_wrapper">
-			<img
-				src="/portfolio2/assets/hobbies/IMG_6867.png"
-				alt="Hobby Image 6"
-			/>
-		</div>
-		<div class="img_wrapper">
-			<img
-				src="/portfolio2/assets/hobbies/IMG_5381.png"
-				alt="Hobby Image 2"
-			/>
-		</div>
-		<div class="img_wrapper">
-			<img
-				src="/portfolio2/assets/hobbies/IMG_6394.png"
-				alt="Hobby Image 3"
-			/>
-		</div>
-		<div class="img_wrapper">
-			<img
-				src="/portfolio2/assets/hobbies/IMG_6745.png"
-				alt="Hobby Image 4"
-			/>
-		</div>
-		<div class="img_wrapper">
-			<img
-				src="/portfolio2/assets/hobbies/IMG_6763.png"
-				alt="Hobby Image 5"
-			/>
-		</div>
+				</p>
+				<div class="img_carousel">
+					<div class="img_wrapper">
+						<img
+							src="/portfolio2/assets/hobbies/IMG_4775.png"
+							alt="Hobby Image 1"
+						/>
+					</div>
+					<div class="img_wrapper">
+						<img
+							src="/portfolio2/assets/hobbies/IMG_6867.png"
+							alt="Hobby Image 6"
+						/>
+					</div>
+					<div class="img_wrapper">
+						<img
+							src="/portfolio2/assets/hobbies/IMG_5381.png"
+							alt="Hobby Image 2"
+						/>
+					</div>
+					<div class="img_wrapper">
+						<img
+							src="/portfolio2/assets/hobbies/IMG_6394.png"
+							alt="Hobby Image 3"
+						/>
+					</div>
+					<div class="img_wrapper">
+						<img
+							src="/portfolio2/assets/hobbies/IMG_6745.png"
+							alt="Hobby Image 4"
+						/>
+					</div>
+					<div class="img_wrapper">
+						<img
+							src="/portfolio2/assets/hobbies/IMG_6763.png"
+							alt="Hobby Image 5"
+						/>
+					</div>
 
-		<div class="img_wrapper">
-			<img
-				src="/portfolio2/assets/hobbies/IMG_7595.png"
-				alt="Hobby Image 8"
-			/>
-		</div>
-		<div class="img_wrapper">
-			<img
-				src="/portfolio2/assets/hobbies/IMG_9759.png"
-				alt="Hobby Image 9"
-			/>
-		</div>
-	</div>
-</div>
+					<div class="img_wrapper">
+						<img
+							src="/portfolio2/assets/hobbies/IMG_7595.png"
+							alt="Hobby Image 8"
+						/>
+					</div>
+					<div class="img_wrapper">
+						<img
+							src="/portfolio2/assets/hobbies/IMG_9759.png"
+							alt="Hobby Image 9"
+						/>
+					</div>
+				</div>
+			</div>
+		</main>
+	</body>
+</html>
