--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,34 +1,90 @@
-<div>
-	<h1>Contact</h1>
-	<p>
-		Feel free to reach out to me via email or connect with me on LinkedIn -
-		I'm always happy to meet new people and explore new opportunities!
-	</p>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<!-- metadata tags -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>catherine yu portfolio</title>
+		<!-- import CSS styles -->
+		<link rel="stylesheet" href="/portfolio2/styles.css" />
+	</head>
 
-	<div class="icon-links">
-		<a href="mailto:catherine_yu1@brown.edu" class="link"
-			><img src="/portfolio2/assets/icons/Email.png" width="50px"
-		/></a>
-		<a href="https://github.com/catherineyu8" class="link" target="_blank"
-			><img src="/portfolio2/assets/icons/GitHub.png" width="50px"
-		/></a>
-		<a
-			href="https://www.linkedin.com/in/catherinejyu/"
-			class="link"
-			target="_blank"
-			><img src="/portfolio2/assets/icons/LinkedIn.png" width="50px"
-		/></a>
-	</div>
+	<!-- page content goes into <body> -->
 
-	<div class="center">
-		<a href="/portfolio2/pages/projects.html" data-page="projects">
-			<div class="mountain-container">
-				<img src="/portfolio2/assets/mountain_bg.png" width="550px" />
-				<div class="overlay-text">
-					Click to <b class="blue">explore</b>
-					my projects!
+	<body>
+		<!-- navbar -->
+		<nav>
+			<a href="/portfolio2/index.html" data-page="home">Catherine Yu</a>
+			<div class="right-nav-tabs">
+				<a href="/portfolio2/pages/projects.html" data-page="projects"
+					>projects</a
+				>
+				<a href="/portfolio2/pages/about.html" data-page="about"
+					>about</a
+				>
+				<a href="/portfolio2/pages/contact.html" data-page="contact"
+					>contact</a
+				>
+				<a
+					href="/portfolio2/assets/Catherine_Yu_Resume_24.pdf"
+					target="_blank"
+					data-passthrough
+					>resume</a
+				>
+			</div>
+		</nav>
+
+		<!-- main page content -->
+		<main>
+			<div>
+				<h1>Contact</h1>
+				<p>
+					Feel free to reach out to me via email or connect with me on
+					LinkedIn - I'm always happy to meet new people and explore
+					new opportunities!
+				</p>
+
+				<div class="icon-links">
+					<a href="mailto:catherine_yu1@brown.edu" class="link"
+						><img
+							src="/portfolio2/assets/icons/Email.png"
+							width="50px"
+					/></a>
+					<a
+						href="https://github.com/catherineyu8"
+						class="link"
+						target="_blank"
+						><img
+							src="/portfolio2/assets/icons/GitHub.png"
+							width="50px"
+					/></a>
+					<a
+						href="https://www.linkedin.com/in/catherinejyu/"
+						class="link"
+						target="_blank"
+						><img
+							src="/portfolio2/assets/icons/LinkedIn.png"
+							width="50px"
+					/></a>
+				</div>
+
+				<div class="center">
+					<a
+						href="/portfolio2/pages/projects.html"
+						data-page="projects"
+					>
+						<div class="mountain-container">
+							<img
+								src="/portfolio2/assets/mountain_bg.png"
+								width="550px"
+							/>
+							<div class="overlay-text">
+								Click to <b class="blue">explore</b>
+								my projects!
+							</div>
+						</div>
+					</a>
 				</div>
 			</div>
-		</a>
-	</div>
-</div>
+		</main>
+	</body>
+</html>
