forgot some icons

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -141,19 +141,25 @@
 
 				<div class="icon-links">
 					<a href="mailto:catherine_yu1@brown.edu" class="link"
-						><img src="assets/icons/Email.png" width="50px"
+						><img
+							src="/portfolio2/assets/icons/Email.png"
+							width="50px"
 					/></a>
 					<a
 						href="https://github.com/catherineyu8"
 						class="link"
 						target="_blank"
-						><img src="assets/icons/GitHub.png" width="50px"
+						><img
+							src="/portfolio2/assets/icons/GitHub.png"
+							width="50px"
 					/></a>
 					<a
 						href="https://www.linkedin.com/in/catherinejyu/"
 						class="link"
 						target="_blank"
-						><img src="assets/icons/LinkedIn.png" width="50px"
+						><img
+							src="/portfolio2/assets/icons/LinkedIn.png"
+							width="50px"
 					/></a>
 				</div>
 			</div>
